--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,16 +1,66 @@
-h1 {
-	color:yellow;
+body {
+	background-color: white;
+	margin: 0;
+}
+
+header{
 
 }
 
-body {
-	background-color:green;
+nav{
+width: 158px
+margin-left: auto;
+margin-right: auto;
+
+}
+
+div{
+
+}
+
+section{
+
+}
+
+footer{
+
+}
+
+h1 {
+color:black;
+text-align: center;
+
+}
+
+h2 {
+
 }
 
 p {
-	color:purple;
+	color:black;
 }
 
+ul{
+
+}
+
+a{
+text-decoration: none;
+}
+
+hr{
+
+}
+
+img{
+
+}
+
+.navlinks {
+	margin: 10px
+	color: black;
+}
+ 
 #slogan {
-	color: blue;
+	color: black;
 }
