--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,9 +1,12 @@
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif:400,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,900);
+
 body {
 	background-color: white;
 	margin: 0;
-}
+	
 
-header{
+header {
 
 }
 
@@ -36,8 +39,17 @@ h2 {
 
 }
 
+h3 {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-style: bold;
+	font-weight: 700;
+}
+
 p {
 	color:black;
+	font-family: 'Noto Serif', serif;
+	font-weight: 400;
+
 }
 
 ul{
