--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -4,14 +4,13 @@
 body {
 	background-color: white;
 	margin: 0;
-	
+	}
 
 
 nav {
-width: 158px
+width: 180px;
 margin-left: auto;
 margin-right: auto;
-
 }
 
 div{
@@ -61,7 +60,7 @@ img{
 }
 
 .navlinks {
-	margin: 10px
+	margin: 10px;
 	color: black;
 }
  
